# flask-rest-decorators

./: README.md  setup.cfg
src/flask_rest_decorators/: __init__.py  decorators.py
