[metadata]
# replace with your username:
name = flask-rest-decorators
version = 0.0.1
author = Márcio Oliveira
author_email = trapcat.inc@gmail.com
description = Flask Rest decorators
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marciojmo/flask-rest-decorators
project_urls =
    Bug Tracker = https://github.com/marciojmo/flask-rest-decorators/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir         = =src
install_requires    = pip
python_requires     = >=3.6
tests_require       = flask>=0.2
packages            = find:

[options.packages.find]
where = src